update the whatsapp number

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </main>
     <footer>
         <div class="footer-content">
-            <p>made by </p>
+            <p>made by swalimnr</p>
         </div>
     </footer>
 </body>
