--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h1>Halal Nile Cone</h1>
             <p>Organic Henna Cone</p>
             <p>Made by Kurumasi</p>
-            <a class="cta-btn" href="https://wa.me/919876543210" target="_blank">Order Now</a>
+            <a class="cta-btn" href="https://wa.me/+91 80896 06262" target="_blank">Order Now</a>
            </div>
            <div class="right-container"></div>
         </div>
