--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
            <div class="left-container">
             <h1>Halal Nile Cone</h1>
             <p>Organic Henna Cone</p>
-            <p>Made by Kurumasi</p>
-            <a class="cta-btn" href="https://wa.me/+91 80896 06262" target="_blank">Order Now</a>
+            <p>Made by Ruhma</p>
+            <a class="cta-btn" href="https://wa.me/8089606262" target="_blank">Order Now</a>
            </div>
            <div class="right-container"></div>
         </div>
