product-section updated

--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />   
     <title>organic henna</title>
 </head>
+<style>
+    
+</style>
 <body>
     <header>
         <div class="container">
            <div class="left-container">
-            <h1>Halal Nile Cone</h1>
-            <p>Organic Henna Cone</p>
+            <h1>HALAL HENNA</h1>
+            <p><span>100%</span> pure organic cone</p>
             <p>Made by Ruhma</p>
             <a class="cta-btn" href="https://wa.me/8089606262" target="_blank">Order Now</a>
            </div>
@@ -24,6 +27,37 @@
         </div>
     </header>
     <main>
+        <div class="second-container">
+            <div class="content-box-heading">
+                <h4>working progress...</h4>
+            </div>
+            <div class="content-boxes">
+                <div class="content-box"></div>
+                <div class="content-box"></div>
+                <div class="content-box"></div>
+                <div class="content-box"></div>
+                 <div class="content-box"></div>
+                <div class="content-box"></div>
+                <div class="content-box"></div>
+                <div class="content-box"></div>
+                 <div class="content-box"></div>
+                <div class="content-box"></div>
+                <div class="content-box"></div>
+                <div class="content-box"></div>
+                <div class="content-box"></div>
+                <div class="content-box"></div>
+                <div class="content-box"></div>
+                <div class="content-box"></div>
+                 <div class="content-box"></div>
+                <div class="content-box"></div>
+                <div class="content-box"></div>
+                <div class="content-box"></div>
+                 <div class="content-box"></div>
+                <div class="content-box"></div>
+                <div class="content-box"></div>
+                <div class="content-box"></div>
+            </div>
+        </div>
         <div class="main-container">
             <div class="media-icon">
                 <a href="https://www.instagram.com/ruhmaabi?igsh=MWNuajBxdHY2a25nZg==">
@@ -34,10 +68,13 @@
                 </a>
             </div>
         </div>
+        
     </main>
     <footer>
         <div class="footer-content">
-            <p>made by swalimnr</p>
+            <a href="">
+                <p>made by swalimnr</p>
+            </a>
         </div>
     </footer>
 </body>
