--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <h1>HALAL HENNA</h1>
             <p><span>100%</span> pure organic cone</p>
             <p>Made by Ruhma</p>
-            <a class="cta-btn" href="https://wa.me/+91 8089606262" target="_blank">Order Now</a>
+            <a class="cta-btn" href="https://www.instagram.com/ruhmaabi?igsh=MWNuajBxdHY2a25nZg==" target="_blank">Order Now</a>
            </div>
            <div class="right-container"></div>
         </div>
@@ -29,33 +29,35 @@
     <main>
         <div class="second-container">
             <div class="content-box-heading">
-                <h4>working progress...</h4>
+                <h4>Results of Our Product</h4>
+
             </div>
             <div class="content-boxes">
-                <div class="content-box"></div>
-                <div class="content-box"></div>
-                <div class="content-box"></div>
-                <div class="content-box"></div>
-                 <div class="content-box"></div>
-                <div class="content-box"></div>
-                <div class="content-box"></div> 
-                <div class="content-box"></div>
-                 <div class="content-box"></div>
-                <div class="content-box"></div>
-                <div class="content-box"></div>
-                <div class="content-box"></div>
-                <div class="content-box"></div>
-                <div class="content-box"></div>
-                <div class="content-box"></div>
-                <div class="content-box"></div>
-                 <div class="content-box"></div>
-                <div class="content-box"></div>
-                <div class="content-box"></div>
-                <div class="content-box"></div>
-                 <div class="content-box"></div>
-                <div class="content-box"></div>
-                <div class="content-box"></div>
-                <div class="content-box"></div>
+                <div class="content-box">
+                    <img a src="/public/img/WhatsApp Image 2025-05-31 at 8.48.32 PM.jpeg" alt="">
+                </div>
+                <div class="content-box">
+                    <img src="public/img/WhatsApp Image 2025-05-31 at 8.48.33 PM (1).jpeg" alt="">
+                </div>
+                <div class="content-box">
+                    <img src="public/img/WhatsApp Image 2025-05-31 at 8.48.33 PM.jpeg" alt="">
+                </div>
+                 <div class="content-box">
+                    <img src="public/img/WhatsApp Image 2025-05-31 at 8.48.44 PM.jpeg" alt="">
+                 </div>
+                  <div class="content-box">
+                    <img a src="/public/img/WhatsApp Image 2025-05-31 at 8.48.32 PM.jpeg" alt="">
+                </div>
+                <div class="content-box">
+                    <img src="public/img/WhatsApp Image 2025-05-31 at 8.48.33 PM (1).jpeg" alt="">
+                </div>
+                <div class="content-box">
+                    <img src="public/img/WhatsApp Image 2025-05-31 at 8.48.33 PM.jpeg" alt="">
+                </div>
+                 <div class="content-box">
+                    <img src="public/img/WhatsApp Image 2025-05-31 at 8.48.44 PM.jpeg" alt="">
+                 </div>
+                
             </div>
         </div>
         <div class="main-container">
@@ -64,7 +66,7 @@
                 <i class="fa-brands fa-square-instagram" style="color: #ffffff;"></i>
                 </a>
                 <a href="">
-                <i class="fa-brands fa-whatsapp" style="color: #ffffff;"></i>                
+                <!-- <i class="fa-brands fa-whatsapp" style="color: #ffffff;"></i>                 -->
                 </a>
             </div>
         </div>
